[gd_scene load_steps=29 format=2]

[ext_resource path="res://Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://World/ShadowSmall.png" type="Texture" id=2]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=3]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Lifebar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Combat/FireHurtBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/ItemDrop.tscn" type="PackedScene" id=8]
[ext_resource path="res://Combat/Hurtbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://Combat/Hitbox.tscn" type="PackedScene" id=14]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=15]
[ext_resource path="res://Enemies/SoftCollision.tscn" type="PackedScene" id=16]
[ext_resource path="res://Enemies/Health.tscn" type="PackedScene" id=17]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 11.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 4.0

[sub_resource type="CircleShape2D" id=9]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=10]
radius = 6.0
height = 8.0

[sub_resource type="CircleShape2D" id=11]
radius = 64.0

[sub_resource type="CircleShape2D" id=12]
radius = 6.0

[sub_resource type="CircleShape2D" id=13]
radius = 6.0

[sub_resource type="Animation" id=14]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=15]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="Health" parent="." instance=ExtResource( 17 )]
max_health = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 7 )
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="WorldCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 14 )]
visible = false
position = Vector2( 0, -15 )
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 9 )

[node name="Hurtbox" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 0, -15 )
collision_layer = 8
invincibility_duration = 0.4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 10 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, -15 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.392157 )
shape = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 16 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 12 )

[node name="FireHurtBox" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, -16 )

[node name="CollisionShape2D" parent="FireHurtBox" index="0"]
shape = SubResource( 13 )

[node name="WanderController" parent="." instance=ExtResource( 15 )]

[node name="WanderIdleStateTransitionTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Lifebar" parent="." instance=ExtResource( 5 )]

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 14 )
anims/stop = SubResource( 15 )

[node name="ItemDrop" parent="." instance=ExtResource( 8 )]
[connection signal="health_changed" from="Health" to="Lifebar" method="_on_Stats_health_changed"]
[connection signal="max_health_changed" from="Health" to="Lifebar" method="_on_Stats_max_health_changed"]
[connection signal="no_health" from="Health" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="player_in_sight" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_player_in_sight"]
[connection signal="player_out_of_sight" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_player_out_of_sight"]
[connection signal="deal_fire_damage" from="FireHurtBox" to="." method="_on_FireHurtBox_deal_fire_damage"]
[connection signal="timeout" from="WanderIdleStateTransitionTimer" to="." method="_on_WanderIdleStateTransitionTimer_timeout"]

[editable path="Hitbox"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="SoftCollision"]

[editable path="FireHurtBox"]
